--- a/notebooks/Data_Exploration.ipynb
+++ b/notebooks/Data_Exploration.ipynb
@@ -1019,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Private Leaderboard Score: 0.0.86785 **"
+    "** Private Leaderboard Score: 0.86785 ( w/o scaling ) **"
    ]
   },
   {
