--- a/notebooks/Data_Exploration.ipynb
+++ b/notebooks/Data_Exploration.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -49,6 +49,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.decomposition import TruncatedSVD as SVD\n",
     "from sklearn.preprocessing import StandardScaler, scale, MinMaxScaler\n",
+    "from sklearn.feature_selection import chi2, SelectKBest\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -910,13 +911,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "svd = SVD(n_components=100)\n",
+    "svd = SVD(n_components=120)\n",
     "svd.fit(body_train_tfidf)\n",
     "\n",
     "features_train = svd.transform(body_train_tfidf)\n",
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -934,7 +935,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reduced number of features are: 100\n"
+      "Reduced number of features are: 120\n"
      ]
     }
    ],
@@ -944,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -967,13 +968,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
+    "scaler = MinMaxScaler()\n",
     "scaler.fit(X_train)\n",
     "\n",
     "X_train = scaler.transform(X_train)\n",
@@ -982,7 +983,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "select = SelectKBest(chi2, k=50)\n",
+    "select.fit(X_train, y_train)\n",
+    "\n",
+    "X_train = select.transform(X_train)\n",
+    "X_test = select.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -991,9 +1007,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV Scores: [ 0.83629839  0.86361015  0.87023785  0.87460351  0.87366606]\n",
-      "Mean CV Score: 0.863683\n",
-      "Std Cv Scoes: 0.014225\n"
+      "CV Scores: [ 0.84160067  0.86644798  0.875675    0.87799708  0.86926143]\n",
+      "Mean CV Score: 0.866196\n",
+      "Std Cv Scoes: 0.012989\n"
      ]
     }
    ],
@@ -1024,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -1033,7 +1049,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC score on the held out set: 0.856591 \n"
+      "ROC AUC score on the held out set: 0.854838 \n"
      ]
     }
    ],
@@ -1047,18 +1063,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# train on full dataset\n",
-    "# scaler = StandardScaler()\n",
-    "# scaler.fit(features_train)\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(features_train)\n",
     "\n",
-    "# features_train = scaler.transform(features_train)\n",
-    "# features_test = scaler.transform(features_test)\n",
+    "features_train = scaler.transform(features_train)\n",
+    "features_test = scaler.transform(features_test)\n",
+    "\n",
+    "select = SelectKBest(chi2, k=50)\n",
+    "select.fit(features_train, feature_df.label.values)\n",
+    "\n",
+    "features_train = select.transform(features_train)\n",
+    "features_test = select.transform(features_test)\n",
     "\n",
     "est.fit(features_train, feature_df.label.values)\n",
     "predictions = est.predict_proba(features_test)[:, 1]"
@@ -1210,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
