--- a/notebooks/Data_Exploration.ipynb
+++ b/notebooks/Data_Exploration.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -50,6 +50,10 @@
     "from sklearn.decomposition import TruncatedSVD as SVD\n",
     "from sklearn.preprocessing import StandardScaler, scale, MinMaxScaler\n",
     "from sklearn.feature_selection import chi2, SelectKBest\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
+    "\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem.porter import PorterStemmer\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -68,6 +72,19 @@
     "sys.path.append(os.path.join(basepath, 'src'))\n",
     "\n",
     "from models import train_test_split, cross_val_scheme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# initialize stemmers\n",
+    "sn_stem = SnowballStemmer(language='english')\n",
+    "p_stem = PorterStemmer()"
    ]
   },
   {
@@ -806,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
@@ -816,18 +833,42 @@
     "    return json.loads(text)\n",
     "\n",
     "def extract_body(json_):\n",
-    "    return json_['body'] if json_['body'] else u''\n",
+    "    return json_['body'].lower() if json_['body'] else u''\n",
+    "\n",
+    "def remove_stopwords(text):\n",
+    "    return ' '.join([word for word in text.split(' ') if word not in ENGLISH_STOP_WORDS])\n",
     "\n",
     "converted_json_train = train.boilerplate.map(convert_to_json)\n",
     "converted_json_test = test.boilerplate.map(convert_to_json)\n",
     "\n",
     "body_train = list(map(extract_body, converted_json_train))\n",
-    "body_test = list(map(extract_body, converted_json_test))"
+    "body_test = list(map(extract_body, converted_json_test))\n",
+    "\n",
+    "body_train = list(map(remove_stopwords, body_train))\n",
+    "body_test = list(map(remove_stopwords, body_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def stem_words(sentence, stemmer):\n",
+    "    return ' '.join([stemmer.stem(word) for word in sentence.split(' ')])\n",
+    "\n",
+    "def stemming(sentences, stemmer):\n",
+    "    return [stem_words(sentence, stemmer) for sentence in sentences]\n",
+    "\n",
+    "body_train = stemming(body_train, sn_stem)\n",
+    "body_test = stemming(body_test, sn_stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -849,14 +890,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "store('train_text_features', body_train_tfidf)\n",
-    "store('test_text_features', body_test_tfidf)"
+    "store('train_text_features_stemmed', body_train_tfidf)\n",
+    "store('test_text_features_stemmed', body_test_tfidf)"
    ]
   },
   {
@@ -867,13 +908,13 @@
    },
    "outputs": [],
    "source": [
-    "body_train_tfidf = load('train_text_features')\n",
-    "body_test_tfidf = load('test_text_features')"
+    "body_train_tfidf = load('train_text_features_removed')\n",
+    "body_test_tfidf = load('test_text_features_removed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 201,
    "metadata": {
     "collapsed": false
    },
@@ -882,7 +923,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of features captured in the body of the boilerplate: 85131\n"
+      "Number of features captured in the body of the boilerplate: 71066\n"
      ]
     }
    ],
@@ -892,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -911,13 +952,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 203,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "svd = SVD(n_components=120)\n",
+    "svd = SVD(n_components=100)\n",
     "svd.fit(body_train_tfidf)\n",
     "\n",
     "features_train = svd.transform(body_train_tfidf)\n",
@@ -926,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 204,
    "metadata": {
     "collapsed": false
    },
@@ -935,7 +976,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reduced number of features are: 120\n"
+      "Reduced number of features are: 100\n"
      ]
     }
    ],
@@ -945,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
@@ -968,37 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "scaler = MinMaxScaler()\n",
-    "scaler.fit(X_train)\n",
-    "\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "select = SelectKBest(chi2, k=50)\n",
-    "select.fit(X_train, y_train)\n",
-    "\n",
-    "X_train = select.transform(X_train)\n",
-    "X_test = select.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 206,
    "metadata": {
     "collapsed": false
    },
@@ -1007,9 +1018,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV Scores: [ 0.84160067  0.86644798  0.875675    0.87799708  0.86926143]\n",
-      "Mean CV Score: 0.866196\n",
-      "Std Cv Scoes: 0.012989\n"
+      "CV Scores: [ 0.83949175  0.86616534  0.87181093  0.87791936  0.8705699 ]\n",
+      "Mean CV Score: 0.865191\n",
+      "Std Cv Scoes: 0.013388\n"
      ]
     }
    ],
@@ -1035,12 +1046,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Private Leaderboard Score: 0.86785 ( w/o scaling ) **"
+    "** Private Leaderboard Score: 0.86825 ( after stemming ) **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 207,
    "metadata": {
     "collapsed": false
    },
@@ -1049,7 +1060,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC score on the held out set: 0.854838 \n"
+      "ROC AUC score on the held out set: 0.859678 \n"
      ]
     }
    ],
@@ -1063,25 +1074,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 208,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# train on full dataset\n",
-    "scaler = MinMaxScaler()\n",
-    "scaler.fit(features_train)\n",
-    "\n",
-    "features_train = scaler.transform(features_train)\n",
-    "features_test = scaler.transform(features_test)\n",
-    "\n",
-    "select = SelectKBest(chi2, k=50)\n",
-    "select.fit(features_train, feature_df.label.values)\n",
-    "\n",
-    "features_train = select.transform(features_train)\n",
-    "features_test = select.transform(features_test)\n",
-    "\n",
     "est.fit(features_train, feature_df.label.values)\n",
     "predictions = est.predict_proba(features_test)[:, 1]"
    ]
@@ -1232,24 +1231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sample_sub['label'] = predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sample_sub.to_csv(os.path.join(basepath, 'submissions/text_features_100_features.csv'), index=False)"
+    "sample_sub['label'] = predictions\n",
+    "sample_sub.to_csv(os.path.join(basepath, 'submissions/text_features_100_features_stemmed.csv'), index=False)"
    ]
   },
   {
