--- a/notebooks/Data_Exploration.ipynb
+++ b/notebooks/Data_Exploration.ipynb
@@ -10,10 +10,8 @@
     "\n",
     "* Whether numerical features are any significant or not.\n",
     "\n",
-    "* Whether we should parse raw content or not ?\n",
     "* Is boilerplate code sufficient enough to capture detailed intricacies in the data ?\n",
-    "* Learn a whole lot new text mining techniques.\n",
-    "* Learn how to run processes in parallel, which is very important when we want to quickly iterate through our various ideas."
+    "* Learn a whole lot new text mining techniques."
    ]
   },
   {
@@ -89,6 +87,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
@@ -99,17 +108,6 @@
     "train = pd.read_csv(os.path.join(basepath, 'data/raw/train.tsv'), delimiter='\\t')\n",
     "test = pd.read_csv(os.path.join(basepath, 'data/raw/test.tsv'), delimiter='\\t')\n",
     "sample_sub = pd.read_csv(os.path.join(basepath, 'data/raw/sampleSubmission.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train.head(2)"
    ]
   },
   {
