--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -278,6 +278,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Private Leaderboard Score: 0.87247 **"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
@@ -338,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
