Wrote a class that would parse raw content of html pages based on the urlid.

--- a/notebooks/ML_Pipelines.ipynb
+++ b/notebooks/ML_Pipelines.ipynb
@@ -6,14 +6,16 @@
    "source": [
     "** Objective of the Notebook. **\n",
     "\n",
-    "* Learn how to create new pipelines\n",
-    "* Feature Engineering\n",
-    "* Text Mining"
+    "* Learn how to create new pipelines.\n",
+    "* Feature Engineering.\n",
+    "* Extract text for different tags and weight them differently to introduce some domain knowledge.\n",
+    "* Text Mining.\n",
+    "* Parse raw html to extract text content and extract features from it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -39,6 +41,10 @@
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "from collections import defaultdict\n",
     "\n",
     "basepath = os.path.expanduser('~/Desktop/src/Stumbleupon_classification_challenge/')\n",
     "sys.path.append(os.path.join(basepath, 'src'))\n",
@@ -51,36 +57,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sns = SnowballStemmer(language='english')"
+    "# intialize Porter Stemmer\n",
+    "\n",
+    "sns = SnowballStemmer(language='english')\n",
+    "por = PorterStemmer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# load datasets\n",
-    "train, test, sample_sub = load_datasets.load_dataset()\n",
-    "\n",
-    "train_urlid = load_datasets.fetch_urlid(train)\n",
-    "test_urlid = load_datasets.fetch_urlid(test)\n",
-    "\n",
-    "load_datasets.delete_urlid(train)\n",
-    "load_datasets.delete_urlid(test)"
+    "train, test, sample_sub = load_datasets.load_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 194,
    "metadata": {
     "collapsed": true
    },
@@ -125,32 +128,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 195,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "feature_df = train[['body', 'title']]\n",
+    "class Parse():\n",
+    "    TAGS = ['h1', 'h2', 'h3', 'h4', 'span',\\\n",
+    "            'a', 'label', 'meta-title', 'meta-description','li']\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def read_html(urlid):\n",
+    "        with open(os.path.join(basepath, 'data/raw/raw_content/'+str(urlid)), 'r', encoding='utf-8', errors='ignore') as infile:\n",
+    "            html = infile.read()\n",
+    "            infile.close()\n",
+    "        return html\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def parse_html(html):\n",
+    "        return BeautifulSoup(html, 'lxml')\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def remove_tags(html, tags):\n",
+    "        for tag in tags:\n",
+    "            for el in html.find_all(tag):\n",
+    "                el.extract()\n",
+    "\n",
+    "        return html\n",
+    " \n",
+    "    @staticmethod\n",
+    "    def tag_content(html, tag):\n",
+    "        def process(s):\n",
+    "            s = s.lower()\n",
+    "            s = s.strip()\n",
+    "            s = re.sub(r'[^a-z0-9]+', ' ', s)\n",
+    "            return s\n",
+    "\n",
+    "        tags_component = tag.split('-')\n",
+    "        attrs = {}\n",
+    "        \n",
+    "        if len(tags_component) > 1:\n",
+    "            tag_name = tags_component[0]\n",
+    "            attrs['name'] = tags_component[1]\n",
+    "        else:\n",
+    "            tag_name = tags_component[0]\n",
+    "        \n",
+    "        for el in html.find_all(tag_name, attrs):\n",
+    "            if len(attrs.keys()) > 0:    \n",
+    "                return process(el.get('content', ''))\n",
+    "            else:\n",
+    "                return process(el.text) if el.text else ''        \n",
+    "        return '' # could not find the tag\n",
+    "        \n",
+    "    def __init__(self, key='urlid'):\n",
+    "        self.key = key\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, df):\n",
+    "        urlids = df[self.key]\n",
+    "        tags_content_dict = defaultdict(list)\n",
+    "        \n",
+    "        for urlid in urlids.values:\n",
+    "            html = self.read_html(urlid)\n",
+    "            html = self.parse_html(html)\n",
+    "            html = self.remove_tags(html, ['style', 'script'])\n",
+    "            \n",
+    "            for tag in self.TAGS:\n",
+    "                tags_content_dict[tag].append(self.tag_content(html, tag))\n",
+    "        \n",
+    "        for tag in self.TAGS:\n",
+    "            df[tag] = tags_content_dict[tag]\n",
+    "        \n",
+    "        return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# parse all the raw content\n",
+    "parse_train = Parse()\n",
+    "train = parse_train.transform(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "parse_test = Parse()\n",
+    "test = parse_test.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "feature_df = train[['body', 'title', 'urlid']]\n",
     "feature_df['label'] = train.label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 163,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "features = ['body', 'title']"
+    "features = ['body', 'title', 'urlid']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 164,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -183,7 +290,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "parse_train = Parse()\n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +330,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 185,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Weights(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, weight):\n",
+    "        self.weight = weight\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return self.weight * X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false
    },
@@ -234,15 +381,22 @@
     "pipeline = Pipeline([\n",
     "            ('strip', strip_non_words),\n",
     "            ('union', FeatureUnion([\n",
+    "                    ('raw_content', Pipeline([\n",
+    "                        ('var', VarSelect(keys='h1')),\n",
+    "                        ('tfidf', TfidfVectorizer(preprocessor=preprocess_string)),\n",
+    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                    ])),\n",
     "                    ('lsa_body', Pipeline([\n",
     "                        ('var', VarSelect(keys='body')),\n",
     "                        ('tfidf', TfidfVectorizer(ngram_range=(1, 2), preprocessor=preprocess_string)),\n",
-    "                        ('svd', TruncatedSVD(n_components=100))\n",
+    "                        ('svd', TruncatedSVD(n_components=100)),\n",
+    "                        ('weight', Weights(weight=10))\n",
     "                    ])),\n",
     "                    ('lsa_title', Pipeline([\n",
     "                        ('var', VarSelect(keys='title')),\n",
     "                        ('tfidf', TfidfVectorizer(preprocessor=preprocess_string)),\n",
-    "                        ('svd', TruncatedSVD(n_components=50))\n",
+    "                        ('svd', TruncatedSVD(n_components=50)),\n",
+    "                        ('weight', Weights(weight=2))\n",
     "                    ])),\n",
     "                ])),\n",
     "            ('scale', StandardScaler()),\n",
@@ -253,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -262,19 +416,19 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('strip', FunctionTransformer(accept_sparse=False,\n",
-       "          func=<function <lambda> at 0x7f9789415268>, pass_y=False,\n",
+       "          func=<function <lambda> at 0x7f21417627b8>, pass_y=False,\n",
        "          validate=False)), ('union', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('lsa_body', Pipeline(steps=[('var', VarSelect(keys='body')), ('tfidf', TfidfVectorizer(...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "       transformer_list=[('raw_content', Pipeline(steps=[('parse', Parse(key='urlid')), ('var', VarSelect(keys='h...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
        "          verbose=0, warm_start=False))])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline.fit(X_train, y_train)"
+    "pipeline.fit(X_train.head(100), y_train.head(100))"
    ]
   },
   {
@@ -286,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC AUC score on unseen examples:  0.860295516404\n"
+      "ROC AUC score on unseen examples:  0.860505867892\n"
      ]
     }
    ],
@@ -384,6 +538,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
